--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
   <h3><a href="NELC930717HGTGCR07.html">NELC930717HGTGCR07</a></h3>
   <h3><a href="VATS000706HZSSRRA5.html">VATS000706HZSSRRA5</a></h3>
   <h3><a href="DUFA890814HJCRLD02.html">DUFA890814HJCRLD02</a></h3>
+  <h3><a href="DIGE950711HGTZRD08.html">DIGE950711HGTZRD08</a></h3>
+  <h3><a href="DIGF970718HGTZRR09.html">DIGF970718HGTZRR09</a></h3>
+
 </body>
 </html>
