--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
   <h3><a href="HEAS570813HVZRLT05.html">HEAS570813HVZRLT05</a></h3>
   <h3><a href="CADL020731MASRZZA7.html">CADL020731MASRZZA7</a></h3>
   <h3><a href="AUVA941108HNEGLB00.html">AUVA941108HNEGLB00</a></h3>
+  <h3><a href="CAPJ000902HASSSSA8.html">CAPJ000902HASSSSA8</a></h3>
+  <h3><a href="MOSM890207HASRRR05.html">MOSM890207HASRRR05</a></h3>
+
 </body>
 </html>
