--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
   <h3><a href="CALE520921HASRVR02.html">CALE520921HASRVR02</a></h3>
   <h3><a href="GOAA881228MMCNRN07.html">GOAA881228MMCNRN07</a></h3>
   <h3><a href="DIRP871124MASZDL05.html">DIRP871124MASZDL05</a></h3>
+  <h3><a href="EIGJ600318HCLNRS02.html">EIGJ600318HCLNRS02</a></h3>
+  <h3><a href="DRUFB600819MCLZLL08.html">RUFB600819MCLZLL08</a></h3>
 </body>
 </html>
