--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
   <h3><a href="RUFB600819MCLZLL08.html">RUFB600819MCLZLL08</a></h3>
   <h3><a href="PASR630425MJCDNT08.html">PASR630425MJCDNT08</a></h3>
   <h3><a href="SADL850111MZSNRR05.html">SADL850111MZSNRR05</a></h3>
+  <h3><a href="JASA900916MZSQNL03.html">JASA900916MZSQNL03</a></h3>
+  <h3><a href="GAEV721227MZSLSR00.html">GAEV721227MZSLSR00</a></h3>
+  <h3><a href="RACU721210HDFMRR08.html">RACU721210HDFMRR08</a></h3> 
 </body>
 </html>
