--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
   <h3><a href="GAEV721227MZSLSR00.html">GAEV721227MZSLSR00</a></h3>
   <h3><a href="RACU721210HDFMRR08.html">RACU721210HDFMRR08</a></h3>
   <h3><a href="MADI961230HASRRG08.html">MADI961230HASRRG08</a></h3>
+  <h3><a href="RURR871004HASBDB00.html">RURR871004HASBDB00</a></h3>
+  <h3><a href="MREOA890613HASYRN00.html">REOA890613HASYRN00</a></h3>
 </body>
 </html>
